--- a/web_static/templates/events.html
+++ b/web_static/templates/events.html
@@ -12,21 +12,15 @@
         <header>
             <span class="logo">SchoolHub</span>
             <nav class="topnav">
-                <a class="active" href="home.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="settings.html">Settings</a>
                 <a href="grades.html">Grades</a>
-                <a href="events.html">Events</a>
+                <a class="active" href="events.html">Events</a>
             </nav>
         </header>
         <div class="midle_container">
             <section class="page-content">
-                <div class="image">
-                    <img  src="../images/schoohub.jpg" alt="school" class="school_image">
-                </div>
-                <div class="quote_header">Daily Nugget</div>
-                <div class="quote"><q>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nulla ac arcu sollicitudin efficitur sit amet eget ante. Curabitur et mauris quam. Etiam luctus magna eget dolor elementum, vitae interdum ipsum imperdiet. Suspendisse vehicula tortor nisi, ac sagittis felis lacinia sit amet. Donec pharetra urna sem
-                </q></div>
+                <!--fill  this part-->
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
