--- a/web_static/templates/settings.html
+++ b/web_static/templates/settings.html
@@ -6,27 +6,56 @@
         <link rel="stylesheet" type="text/css" href="../styles/side_panel.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/footer.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/home.css"/>
+        <link rel="stylesheet" type="text/css" href="../styles/settings.css"/>
         <title></title>
     </head>
     <body>
         <header>
             <span class="logo">SchoolHub</span>
             <nav class="topnav">
-                <a class="active" href="home.html">Home</a>
-                <a href="settings.html">Settings</a>
+                <a href="home.html">Home</a>
+                <a class="active" href="settings.html">Settings</a>
                 <a href="grades.html">Grades</a>
                 <a href="events.html">Events</a>
             </nav>
         </header>
         <div class="midle_container">
             <section class="page-content">
-                <div class="image">
-                    <img  src="../images/schoohub.jpg" alt="school" class="school_image">
+                <!--fill  this part-->
+                <img src="../images/Untitled design.png" class="user_image">
+                <div class="personal_data">
+                    <div id="username">Reinhard</div>
+                    <div class="edit_details">
+                    <div class="dropdown_semester">
+                        <div class="edit_unit">1st Semester</div> 
+                        <div class="dropdown-content_semester">
+                            <a href="#">1st Semester</a>
+                            <a href="#">2nd Semester</a>
+                        </div>
+                    </div>
+                    <div class="dropdown_year">
+                        <div class="edit_unit">1st Year</div> 
+                        <div class="dropdown-content_year">
+                            <a href="#">1st Year</a>
+                            <a href="#">2nd Year</a>
+                            <a href="#">3rd Year</a>
+                            <a href="#">4th Year</a>
+                        </div>
+                    </div>
+                    </div>
+
                 </div>
-                <div class="quote_header">Daily Nugget</div>
-                <div class="quote"><q>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet nulla ac arcu sollicitudin efficitur sit amet eget ante. Curabitur et mauris quam. Etiam luctus magna eget dolor elementum, vitae interdum ipsum imperdiet. Suspendisse vehicula tortor nisi, ac sagittis felis lacinia sit amet. Donec pharetra urna sem
-                </q></div>
+                <div class="courses_data">
+                    <div class="courses_header">Courses</div>
+                    <div class="course_list">
+                        <div class="course">Math 120</div>
+                        <div class="course">chem 130</div>
+                        <div class="course">Eng 100</div>
+                    </div>
+                </div>
+                <div class="edit_class">
+                    <img src="../images/add_button.png" alt="add_class" class="add">
+                </div>
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
