--- a/web_static/templates/events.html
+++ b/web_static/templates/events.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../styles/side_panel.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/footer.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/home.css"/>
+        <link rel="stylesheet" type="text/css" href="../styles/events.css"/>
         <title></title>
     </head>
     <body>
@@ -21,6 +22,71 @@
         <div class="midle_container">
             <section class="page-content">
                 <!--fill  this part-->
+                <table class="grades_table">
+                    <tr>
+                      <th>Time</th>
+                      <th>MON</th>
+                      <th>TUE</th>
+                      <th>WED</th>
+                      <th>THU</th>
+                      <th>FRI</th>
+                      <th>SAT</th>
+                      <th>SUN</th>
+                    </tr>
+                    <tr>
+                      <td>8 - 10</td>
+                      <td></td>
+                      <td>Eng 100</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>10 -12</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>chem 130</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                        <td>12 -14</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>Math 120</td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td>14 -16</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td>16 -18</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                  </table>
+                  <div class="edit_class">
+                    <button>Edit/Add</button>
+                    <button>Delete</button>
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
