--- a/web_static/templates/grades.html
+++ b/web_static/templates/grades.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../styles/side_panel.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/footer.css"/>
         <link rel="stylesheet" type="text/css" href="../styles/home.css"/>
+        <link rel="stylesheet" type="text/css" href="../styles/grades.css"/>
         <title></title>
     </head>
     <body>
@@ -21,6 +22,47 @@
         <div class="midle_container">
             <section class="page-content">
                 <!--fill  this part-->
+                <table class="grades_table">
+                    <tr>
+                      <th>Courses</th>
+                      <th>Weight</th>
+                      <th>C/A</th>
+                      <th>Exam</th>
+                      <th>Total</th>
+                    </tr>
+                    <tr>
+                      <td>Math 120<input type="checkbox"></td>
+                      <td>3</td>
+                      <td>18</td>
+                      <td>58</td>
+                      <td>76</td>
+                    </tr>
+                    <tr>
+                      <td>Chem 130<input type="checkbox"></td>
+                      <td>3</td>
+                      <td>19</td>
+                      <td>50</td>
+                      <td>69</td>
+                    </tr>
+                  </table>
+                  <div class="edit_class">
+                    <button>Edit/Add</button>
+                    <button>Delete</button>
+                </div>
+                <div class="grade_point">
+                    <div class="grades_title">Grade point</div>
+                    <table class="grades_table">
+                        <tr>
+                            <th>Year</th>
+                            <th>GPA</th>
+                            <th>CGPA</th>
+                        </tr>
+                        <tr>
+                            <td>100</td>
+                            <td>4.3</td>
+                            <td>4.3</td>
+                        </tr>
+                    </table>
             </section>
             <section class="side-panel">
                 <h2 class="section_title">Today's Events</h2>
