finished static files

--- a/web_static/styles/grades.css
+++ b/web_static/styles/grades.css
@@ -58,3 +58,48 @@ button:hover {
 .grade_point {
     margin-top: 30px;
 }
+
+/* rules for the modals for edit add button*/
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+
+.edit-add_modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+.edit_form {
+    background-color: #fefefe;
+    padding: 15px;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 70%; /* Could be more or less, depending on screen size */
+    max-width: 350px;
+    border-radius: 5px;
+}
+
+.edit_form textarea {
+    resize: none;
+    margin: 10px 0px;
+}
+
+input[type="text"] {
+    width: 200px;
+    display: block;
+}
