--- a/web_dynamic/pages/statics/styles/home.css
+++ b/web_dynamic/pages/statics/styles/home.css
@@ -32,6 +32,12 @@ body {
     width: 80%;
 
 }
+footer span {
+    padding-top: 5px;
+    color: gray;
+    vertical-align: middle;
+    text-align: center;
+}
 
 /* Change styles for side_panel on extra small screens */
 @media screen and (max-width: 600px) {
