--- a/web_dynamic/pages/statics/styles/login.css
+++ b/web_dynamic/pages/statics/styles/login.css
@@ -1,4 +1,7 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url(../images/cover_image.jpg);
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
@@ -107,7 +110,7 @@ span.psw {
     width: 100px;
 }
 
-#hide_str {
+#hide_str, .hide_str {
     color: #f44336;
     display: none;
     font-size: small;
